--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="home.html" frameborder="0" name="tela" id="tela" scrolling="no"></iframe>
         </section>
         <section id="redes-sociais">
 
