Criando os links de direcionamento

--- a/home.html
+++ b/home.html
@@ -12,10 +12,11 @@
     }
 
     body {
-        width: 100vh;
+        width: 100vw;
         height: 100vh;
-        background: black url('imagens/tela-home.jpg');
+        background: black url('imagens/tela-home.jpg') no-repeat top center;
         background-size: cover;
+       
     }
 </style>
 <body>
